도커_쿠버네티스_컨테이너_개발과_운영/chapter5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: nginx
        image: ghcr.io/jpubdocker/simple-nginx-proxy:v0.1.0
        ports:
        - containerPort: 80
      - name: echo
        image: ghcr.io/jpubdocker/echo:v0.1.0
        ports:
        - containerPort: 8080
