도커_쿠버네티스_컨테이너_개발과_운영/chapter5/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: NodePort
  selector:
    app: echo
  ports:
  - name: http
    port: 80
