도커_쿠버네티스_컨테이너_개발과_운영/chapter5/service-without-release.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    app: echo
    # release: summer
  ports:
  - name: http
    port: 80
