도커_쿠버네티스_컨테이너_개발과_운영/chapter5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector: # 트래픽 흐름의 파드를 특정하는 레이블
    app: echo
    release: summer
  ports:
  - name: http
    port: 80
