도커_쿠버네티스_컨테이너_개발과_운영/chapter5/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  labels:
    app: echo
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      set $agentflag 0;
      
      if ($http_user_agent ~* "(Mobile)" ) {
        set $agentflag 1;
      }
      
      if ($agentflag = 1) {
        return 301 http://jpub.tistory.com/;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: ch05.jpub.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: echo
            port:
              number: 80
